Fix spacing and color of the tb custom notify class [skip ci]

--- a/website/static/css/fangorn.css
+++ b/website/static/css/fangorn.css
@@ -5,9 +5,9 @@
 }
 
 .alert-deleting {
-	background: #F5F5F5;
-color: #F00;
-text-align: center;
+  background: #F5F5F5;
+  color: #A94442;
+  text-align: center;
 }
 
 .tb-head {
@@ -97,8 +97,8 @@ text-align: center;
 }
 .tb-notify {
 	white-space: nowrap;
-    height: 30px;
-    padding-top: 4px;
+  height: 34px;
+  padding-top: 4px;
 }
 
 .tb-row .progress {
